--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0|^8.1",
         "illuminate/notifications": "^9.0",
         "illuminate/support": "^9.0",
         "illuminate/queue": "^9.0",
